[Fix] HTML&CSS課題のタイトル微修正と画像ファイル追加

--- a/task.html
+++ b/task.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,inline-scale=1.0">
     <link rel="stylesheet" href="task.css" />
-    <title>9章演習問題</title>
+    <title>HTML&CSS課題</title>
   </head>
 
   <body>
